WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269508
v2: Fix warnings found by compiling with -Wformat in open source clang-17
https://bugs.webkit.org/show_bug.cgi?id=269508
Summary
v2: Fix warnings found by compiling with -Wformat in open source clang-17
David Kilzer (:ddkilzer)
Reported
2024-02-15 14:05:43 PST
v2: Fix warnings found by compiling with -Wformat in open source clang-17. Sadly, `-Wformat=2` with older clang versions don't catch these yet, so we keep having to fix them as follow-ups. Regressed with: Add support for loading and connecting the Web Extension devtools background page.
https://webkit.org/b/246485
rdar://problem/114823326
https://commits.webkit.org/274506@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-15 14:06:37 PST
<
rdar://problem/123036201
>
David Kilzer (:ddkilzer)
Comment 2
2024-02-15 14:08:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24546
EWS
Comment 3
2024-02-15 14:52:19 PST
Committed
274768@main
(f7cc294d5720): <
https://commits.webkit.org/274768@main
> Reviewed commits have been landed. Closing PR #24546 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug