v2: Fix warnings found by compiling with -Wformat in open source clang-17 https://bugs.webkit.org/show_bug.cgi?id=269508 <rdar://123036201>

Reviewed by Timothy Hatcher and Chris Dumez.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::loadInspectorBackgroundPage):
(WebKit::WebExtensionContext::unloadInspectorBackgroundPage):
- Add enumToUnderlyingType() to fix the warnings.

Canonical link: https://commits.webkit.org/274768@main